--- a/web/index.html
+++ b/web/index.html
@@ -21,5 +21,9 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
