--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Tuesdae Rush: A Unique Game Experience on Control and Letting Go Experience the thrill of rush hour traffic while maintaining your zen. Help cars navigate through a busy intersection by controlling traffic lights and score points for safe passages.">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -16,7 +16,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>tuesdae_rush</title>
+  <title>🚦 Tuesdae Rush - Traffic Intersection Game</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
