--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
 
     // Function to update the title
     function updateTitle() {
-      const baseTitle = "Loading Tuesdae Rush  "; // Base title without the dots or symbol
+      const baseTitle = "Tuesdae Rush  "; // Base title without the dots or symbol
 
       // Add one more space after every interval
       dots += " ∘";
